--- a/spring-boot-thymeleaf-view-example/JenkinsFile
+++ b/spring-boot-thymeleaf-view-example/JenkinsFile
@@ -16,10 +16,10 @@ pipeline {
       steps {
         sh 'ls -ltr'
         // build the project and create a JAR file
-        sh ' mvn clean package'
+        sh 'cd spring-boot-thymeleaf-view-example && mvn clean package'
       }
     }
-    stage('Static Code Analysis') {
+   /* stage('Static Code Analysis') {
       environment {
         SONAR_URL = "http://18.215.240.20:9000"
       }
@@ -28,7 +28,7 @@ pipeline {
           sh ' mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
         }
       }
-    }
+    } */
     stage('Build and Push Docker Image') {
       environment {
         DOCKER_IMAGE = "praveendshankar0502/java:${BUILD_NUMBER}"
@@ -37,7 +37,7 @@ pipeline {
       }
       steps {
         script {
-            sh ' docker build -t ${DOCKER_IMAGE} .'
+            sh 'cd spring-boot-thymeleaf-view-example && docker build -t ${DOCKER_IMAGE} .'
             def dockerImage = docker.image("${DOCKER_IMAGE}")
             docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
                 dockerImage.push()
