--- a/spring-boot-thymeleaf-view-example/deployment.yml
+++ b/spring-boot-thymeleaf-view-example/deployment.yml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: spring-boot-app
+  name: spring-boot-thymeleaf-view-example
   labels:
-    app: spring-boot-app
+    app: spring-boot-thymeleaf-view-example
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: spring-boot-app
+      app: spring-boot-thymeleaf-view-example
   template:
     metadata:
       labels:
-        app: spring-boot-app
+        app: spring-boot-thymeleaf-view-example
     spec:
       containers:
-      - name: spring-boot-app
+      - name: spring-boot-thymeleaf-view-example
         image: praveendshankar0502/java:replaceImageTag
         ports:
         - containerPort: 8080
