--- a/spring-boot-thymeleaf-view-example/Jenkinsfile
+++ b/spring-boot-thymeleaf-view-example/Jenkinsfile
@@ -56,8 +56,10 @@ pipeline {
                     git config user.email "praveendshankar12@gmail.com"
                     git config user.name "PraveenDShankar"
                     BUILD_NUMBER=${BUILD_NUMBER}
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
-                    git add deployment.yml
+                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-thymeleaf-view-example
+/deployment.yml
+                    git add spring-boot-thymeleaf-view-example
+/deployment.yml
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
                     git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                 '''
