--- a/spring-boot-thymeleaf-view-example/Jenkinsfile
+++ b/spring-boot-thymeleaf-view-example/Jenkinsfile
@@ -19,16 +19,16 @@ pipeline {
         sh 'cd spring-boot-thymeleaf-view-example && mvn clean package'
       }
     }
-   /* stage('Static Code Analysis') {
+    stage('Static Code Analysis') {
       environment {
-        SONAR_URL = "http://18.215.240.20:9000"
+        SONAR_URL = "http://54.198.215.173:9000"
       }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
           sh ' mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
         }
       }
-    } */
+    } 
     stage('Build and Push Docker Image') {
       environment {
         DOCKER_IMAGE = "praveendshankar0502/java:${BUILD_NUMBER}"
