--- a/spring-boot-thymeleaf-view-example/Jenkinsfile
+++ b/spring-boot-thymeleaf-view-example/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
     }
     stage('Static Code Analysis') {
       environment {
-        SONAR_URL = "http://54.174.117.238:9000"
+        SONAR_URL = "http://54.164.209.163:9000"
       }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
@@ -56,8 +56,8 @@ pipeline {
                     git config user.email "praveendshankar12@gmail.com"
                     git config user.name "PraveenDShankar"
                     BUILD_NUMBER=${BUILD_NUMBER}
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-thymeleaf-view-example/deployment.yml
-                    git add spring-boot-thymeleaf-view-example/deployment.yml
+                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-thymeleaf-view-example/k8s/deployment.yaml
+                    git add spring-boot-thymeleaf-view-example/k8s/deployment.yaml
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
                     git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                 '''
