--- a/spring-boot-thymeleaf-view-example/k8s/deployement.yaml
+++ b/spring-boot-thymeleaf-view-example/k8s/deployement.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-thymeleaf-view-example
-        image: praveendshankar0502/java:4
+        image: praveendshankar0502/java:replaceImageTag
         ports:
         - containerPort: 8080
