--- a/spring-boot-thymeleaf-view-example/.github/workflows/cicd.yaml
+++ b/spring-boot-thymeleaf-view-example/.github/workflows/cicd.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'src/**'
+      - '.github/workflows/cicd.yaml'
 jobs:
  build:
  steps:
