--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,11 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file SpringBootWithKubernetes/spring-boot-thymeleaf-view-example/spring-boot-thymeleaf-view-example/pom.xml
+      id: packaging-jar
+      shell: bash
+      run: |
+        cd .
+        mvn clean install
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
