--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,7 @@ jobs:
       id: packaging-jar
       shell: bash
       run: |
-        cd .
+        cd spring-boot-thymeleaf-view-example/
         mvn clean install
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
