--- a/spring-boot-thymeleaf-view-example/.github/workflows/maven.yml
+++ b/spring-boot-thymeleaf-view-example/.github/workflows/maven.yml
@@ -18,7 +18,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+#steps for running
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
